--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,10 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/brands.min.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/solid.min.css",
               "src/styles.css"
             ],
             "scripts": []
