--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,6 +27,6 @@ jobs:
           server: ftp.igordrangel.com.br
           username: site@igordrangel.com.br
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: './dist/'
+          server-dir: './'
           local-dir: './dist/'
           dangerous-clean-slate: true
